@@ -227,7 +227,9 @@
 		"redcurrant" : {base: "expandedfoods:item/food/grain/overlays/redcurrant" },
 		"blackcurrant" : {base: "expandedfoods:item/food/grain/overlays/blackcurrant" },
 		"whitecurrant" : {base: "expandedfoods:item/food/grain/overlays/whitecurrant" },
-		"apple" : {base: "expandedfoods:item/food/grain/overlays/apple" },
+		"pinkapple" : {base: "expandedfoods:item/food/grain/overlays/apple" },
+		"redapple" : {base: "expandedfoods:item/food/grain/overlays/apple" },
+		"yellowapple" : {base: "expandedfoods:item/food/grain/overlays/apple" },
 		"breadfruit" : {base: "expandedfoods:item/food/grain/overlays/breadfruit" },
 		"cherry" : {base: "expandedfoods:item/food/grain/overlays/cherry" },
 		"lychee" : {base: "expandedfoods:item/food/grain/overlays/lychee" },
@@ -243,7 +245,9 @@
 		"strongtannin": { base: "game:block/liquid/strongtannin"},
 		"honey": { base: "game:block/liquid/honey"},
 		"peanutbutter": { base: "item/food/peanut/butter"},
-		"fill-apple": { base: "game:block/food/pie/fill-apple" },
+		"fill-pinkapple": { base: "game:block/food/pie/fill-apple" },
+		"fill-redapple": { base: "game:block/food/pie/fill-apple" },
+		"fill-yellowapple": { base: "game:block/food/pie/fill-apple" },
 		"fill-blackcurrant": { base: "game:block/food/pie/fill-blackcurrant" },
 		"fill-blueberry": { base: "game:block/food/pie/fill-blueberry" },
 		"fill-breadfruit": { base: "game:block/food/pie/fill-breadfruit" },
