@@ -76,6 +76,7 @@ BALANCING:
 - Cooked veggies can be added to salad & cold pasta
 
 BUG FIXES:
+- Apple visuals in muffin/fruit dough fixed - DONE!!!
 
 MISC: 
 - Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
